Bug 311936 - clip region larger than target surface area causing performance problem.  r=cworth, a=asa